tests/error/iter_errors/iter_wrong_type.err
Error: Not iterable (at $FILE:16:13)
   | 
14 | @guppy
15 | def test(x: MyType) -> None:
16 |     for _ in x:
   |              ^ Expression of type `MyType` is not iterable

Help: Fix signature of method `MyType.__iter__`:  Expected `MyType -> ?Iter`,
got `(MyType, int) -> MyType`

Guppy compilation failed due to 1 previous error
